--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "add": "^2.0.6",
     "boxicons": "^2.1.1",
     "jquery": "^3.6.0",
+    "sass": "^1.49.7",
     "turbolinks": "^5.2.0",
     "webpack-cli": "^3.3.12",
     "yarn": "^1.22.17"
