--- a/package.json
+++ b/package.json
@@ -1,23 +1,24 @@
 {
-  "name": "blog",
-  "private": true,
-  "dependencies": {
-    "@rails/actioncable": "^7.0.1",
-    "@rails/activestorage": "^7.0.1",
-    "@rails/ujs": "^7.0.1",
-    "@rails/webpacker": "5.4.3",
-    "@themesberg/flowbite": "^1.3.0",
-    "add": "^2.0.6",
-    "boxicons": "^2.1.1",
-    "jquery": "^3.6.0",
-    "sass": "^1.49.7",
-    "turbolinks": "^5.2.0",
-    "webpack-cli": "^3.3.12",
-    "yarn": "^1.22.17"
-  },
-  "version": "0.1.0",
-  "devDependencies": {
-    "webpack": "^5.68.0",
-    "webpack-dev-server": "^3"
-  }
+    "name": "blog",
+    "private": true,
+    "build": "webpack --mode production --config ./webpack.prod.config.js",
+    "dependencies": {
+        "@rails/actioncable": "^7.0.1",
+        "@rails/activestorage": "^7.0.1",
+        "@rails/ujs": "^7.0.1",
+        "@rails/webpacker": "5.4.3",
+        "@themesberg/flowbite": "^1.3.0",
+        "add": "^2.0.6",
+        "boxicons": "^2.1.1",
+        "jquery": "^3.6.0",
+        "sass": "^1.49.7",
+        "turbolinks": "^5.2.0",
+        "webpack-cli": "^3.3.12",
+        "yarn": "^1.22.17"
+    },
+    "version": "0.1.0",
+    "devDependencies": {
+        "webpack": "^5.68.0",
+        "webpack-dev-server": "^3"
+    }
 }
